Rest assured v2 (#117)
* Commit RestAssured v2

* Commit RestAssured v2.1

* Commit RestAssured v2.2